# once-crunch

./: .gitattributes  .gitignore  Containerfile  LICENSE  README.md  pyproject.toml
once-crunch/: __init__.py  __main__.py
once-crunch/commands/: __init__.py  unpack.py
once-crunch/formats/: FormatHandler.py  NXFNFormatHandler.py  NXPKFormatHandler.py  __init__.py
once-crunch/util/: __init__.py  imgtools.py  logging.py
pycdo/: once-human.pycrules
scripts/: auth-steam.ps1  build-container.ps1  build-container.sh  decode-bindicts  download-game.ps1  extract-bindicts  install-pwsh.sh  process-pycfiles  process-pycfiles.ps1  run-container.ps1  run-container.sh  stitch-map.ps1  unpack-gamefiles  unpack-gamefiles.ps1
sys/: README.md  build-dpkgequiv.sh  debian.list  init-venv.sh  install-buildtools.sh  install-pvrtextool.sh  install-pwsh.sh  install-pycdc.sh  install-python.sh  install-steamcmd.sh  with-daemon.sh  with-venv.sh
